gap fix when pages are arranged horizontally

--- a/src-lib/v3/css/custom/texscript-core.css
+++ b/src-lib/v3/css/custom/texscript-core.css
@@ -5,7 +5,7 @@
 
 .texscript-pages {
   display: flex;
-  gap: 24px;
+  gap: 24px 16px;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
